--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --primary-color: hsl(0, 0%, 100%);
+  --secondary-color: hsl(240, 5%, 65%);
+}
 ul {
   list-style: none;
 }
@@ -24,16 +28,17 @@ header {
 header div {
   width: 120px;
   margin: auto;
-  background-image: linear-gradient(
-    90deg,
-    rgb(59, 59, 214) 0%,
-    rgb(192, 23, 23) 100%
-  );
+
   border-radius: 50%;
   display: flex;
   padding: 4px;
   transition: transform 0.3s;
   animation: fromTop 0.7s 0.4s backwards;
+}
+.header {
+  background: linear-gradient(270deg, #ad2121 0%, #9514bd 50%, #2319af 100%);
+  background-size: 2000% 2000%;
+  animation: gradientAnimation 10s ease infinite;
 }
 header div:hover {
   transform: scale(1.1);
@@ -53,18 +58,13 @@ main section {
   animation: fromBotton 0.7 0.4s backwards;
 }
 section {
-  color: white;
-  background-image: linear-gradient(
-    90deg,
-    rgb(59, 59, 214) 0%,
-    rgb(192, 23, 23) 100%
-  );
+  color: var(--primary-color);
   padding-top: 4px;
   border-radius: 10px;
 }
 section div {
   background-color: #2a2634;
-  padding: 32px;
+  padding: 28px;
   padding-top: 24px;
   border-radius: 8px;
 }
@@ -73,12 +73,12 @@ section h2 {
 }
 section p {
   letter-spacing: -0.18px;
-  color: #a1a1aa;
+  color: var(--secondary-color);
 }
 section ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 12px;
   margin-top: 24px;
 }
 section ul li {
@@ -94,11 +94,7 @@ section ul li:hover {
 .channel-list img {
   border-radius: 50%;
   width: 70px;
-  background-image: linear-gradient(
-    90deg,
-    rgb(59, 59, 214) 0%,
-    rgb(192, 23, 23) 100%
-  );
+  border: 1px solid #443e54;
   padding: 2px;
 }
 /* animation */
@@ -114,24 +110,35 @@ main section:nth-child(3) {
 }
 
 @keyframes fromTop {
-  from {
+  0% {
     opacity: 0;
     transform: translateY(-30px);
   }
 
-  to {
+  100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 @keyframes fromBotton {
-  from {
+  0% {
     opacity: 0;
     transform: translateX(-30px);
   }
 
-  to {
+  100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
