--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 :root {
   --primary-color: hsl(0, 0%, 100%);
   --secondary-color: hsl(240, 5%, 65%);
+  --gradient-color: linear-gradient(90deg, #9572fc, #43e7ad);
 }
 ul {
   list-style: none;
@@ -28,17 +29,12 @@ header {
 header div {
   width: 120px;
   margin: auto;
-
+  background: var(--gradient-color);
   border-radius: 50%;
   display: flex;
   padding: 4px;
   transition: transform 0.3s;
   animation: fromTop 0.7s 0.4s backwards;
-}
-.header {
-  background: linear-gradient(270deg, #ad2121 0%, #9514bd 50%, #2319af 100%);
-  background-size: 2000% 2000%;
-  animation: gradientAnimation 10s ease infinite;
 }
 header div:hover {
   transform: scale(1.1);
@@ -59,6 +55,7 @@ main section {
 }
 section {
   color: var(--primary-color);
+  background: var(--gradient-color);
   padding-top: 4px;
   border-radius: 10px;
 }
